AC_INIT(regexp, unknown, unknown)
AM_INIT_AUTOMAKE([foreign 1.10])
AM_MAINTAINER_MODE
AC_CANONICAL_HOST

AC_PROG_INSTALL
AC_PROG_CC
RTEMS_CHECK_TOOL(RANLIB,ranlib)
RTEMS_CHECK_TOOL(AR,ar)

AM_ENABLE_MULTILIB([Makefile],[..])
dnl install multilibs into MULTISUBDIR
AC_SUBST(libdir,[${libdir}'$(MULTISUBDIR)'])

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
